add camera to network verification case

--- a/firmware/verification/README
+++ b/firmware/verification/README
@@ -1,2 +1,5 @@
 test_camera.py : test environment able to drive camera
 	python test_camera.py
+test_to_network.py : Stream RPi Camera Module Video to network, using Python. 
+	refer: http://helloraspberrypi.blogspot.tw/2015/04/stream-rpi-camera-module-video-to.html
+	python test_to_network.py
